--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/microservices": "^10.3.10",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/sequelize": "^10.0.1",
+    "@nestjs/swagger": "^7.4.0",
     "nats": "^2.28.0",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.1.13",
