--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.3.10",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.3.10",
     "@nestjs/sequelize": "^10.0.1",
     "@nestjs/swagger": "^7.4.0",
+    "minio": "^8.0.1",
+    "multer": "^1.4.5-lts.1",
     "nats": "^2.28.0",
+    "nestjs-minio": "^2.6.1",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
