--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.3.10",
+    "@nestjs/mongoose": "^10.0.10",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.10",
-    "@nestjs/sequelize": "^10.0.1",
     "@nestjs/swagger": "^7.4.0",
     "bcrypt": "^5.1.1",
     "cache-manager": "^5.7.3",
@@ -36,15 +37,18 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "ioredis": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
     "minio": "^8.0.1",
+    "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "nats": "^2.28.0",
     "nestjs-minio": "^2.6.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "sequelize": "^6.37.3",
-    "sequelize-typescript": "^2.1.6"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -56,7 +60,8 @@
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
-    "@types/sequelize": "^4.28.20",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
